--- a/docker-compose-app-prod.yml
+++ b/docker-compose-app-prod.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   app:
     build: .
@@ -12,6 +14,7 @@ services:
       - DB_PORT=3306
     volumes:
       - /mnt/efs:/app/public/uploads
+    user: "1001:1001"
     restart: unless-stopped
     networks:
       - app-network
