--- a/env.example
+++ b/env.example
@@ -10,4 +10,11 @@ NODE_ENV=development
 PORT=3000
 
 # Configurações de Segurança
-SESSION_SECRET=sua_chave_secreta_aqui 
+SESSION_SECRET=sua_chave_secreta_aqui
+
+# Configurações do AWS S3
+AWS_ACCESS_KEY_ID=sua_access_key_aqui
+AWS_SECRET_ACCESS_KEY=sua_secret_key_aqui
+AWS_REGION=us-east-1
+AWS_S3_BUCKET=nome_do_seu_bucket
+AWS_S3_BUCKET_URL=https://nome_do_seu_bucket.s3.us-east-1.amazonaws.com 
