--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "author": "Desafio Arquitetura",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.450.0",
+    "@aws-sdk/s3-request-presigner": "^3.450.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -26,6 +28,7 @@
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "multer": "^2.0.1",
+    "multer-s3": "^3.0.1",
     "mysql2": "^3.6.5"
   },
   "devDependencies": {
