--- a/docker-compose-app-prod.yml
+++ b/docker-compose-app-prod.yml
@@ -12,6 +12,11 @@ services:
       - DB_PASSWORD=password
       - DB_NAME=produtos_db
       - DB_PORT=3306
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+      - AWS_REGION=${AWS_REGION}
+      - AWS_S3_BUCKET=${AWS_S3_BUCKET}
+      - AWS_S3_BUCKET_URL=${AWS_S3_BUCKET_URL}
     volumes:
       - /mnt/efs:/app/public/uploads
     user: "1001:1001"
