--- a/env.example
+++ b/env.example
@@ -17,4 +17,11 @@ AWS_ACCESS_KEY_ID=sua_access_key_aqui
 AWS_SECRET_ACCESS_KEY=sua_secret_key_aqui
 AWS_REGION=us-east-1
 AWS_S3_BUCKET=nome_do_seu_bucket
-AWS_S3_BUCKET_URL=https://nome_do_seu_bucket.s3.us-east-1.amazonaws.com 
+AWS_S3_BUCKET_URL=https://nome_do_seu_bucket.s3.us-east-1.amazonaws.com
+
+# Configurações do Redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=0
+REDIS_CACHE_TTL=60 
