--- a/docker-compose-app-prod.yml
+++ b/docker-compose-app-prod.yml
@@ -17,6 +17,11 @@ services:
       - AWS_REGION=${AWS_REGION}
       - AWS_S3_BUCKET=${AWS_S3_BUCKET}
       - AWS_S3_BUCKET_URL=${AWS_S3_BUCKET_URL}
+      - REDIS_HOST=${REDIS_HOST}
+      - REDIS_PORT=6379
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - REDIS_DB=0
+      - REDIS_CACHE_TTL=60
     volumes:
       - /mnt/efs:/app/public/uploads
     user: "1001:1001"
