--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node app.js",
     "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "configure-s3": "node scripts/configure-s3.js"
+    "configure-s3": "node scripts/configure-s3.js",
+    "test-redis": "node scripts/test-redis.js"
   },
   "keywords": [
     "node",
@@ -30,7 +31,8 @@
     "helmet": "^7.1.0",
     "multer": "^2.0.1",
     "multer-s3": "^3.0.1",
-    "mysql2": "^3.6.5"
+    "mysql2": "^3.6.5",
+    "redis": "^4.6.10"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
